RESOLVED FIXED281079
[TextureMapper] Preserve-3d layers don't get flattened correctly
https://bugs.webkit.org/show_bug.cgi?id=281079
Summary [TextureMapper] Preserve-3d layers don't get flattened correctly
Jani Hautakangas
Reported 2024-10-08 12:09:05 PDT
Created attachment 472863 [details] test case In the 3D rendering context, TextureMapper does not flatten layers correctly to a plane. Expected Behavior (as per CSS spec): "The element establishing the 3D rendering context, along with other 3D transformed elements participating in the context, should be rendered into its own plane. This plane includes the element’s backgrounds, borders, box decorations, content, and descendant elements—excluding descendants that have their own planes." Actual Behavior: TextureMapper incorrectly resets transformations to root layer 2D plane for leaf layers in the 3D rendering context, rather than properly accumulating 3D transforms for each layer.
Attachments
test case (1.63 KB, text/html)
2024-10-08 12:09 PDT, Jani Hautakangas
no flags
[Screenshot] Firefox: Layers rendered correcty (3.42 KB, image/png)
2024-10-08 12:09 PDT, Jani Hautakangas
no flags
[Screenshot] WPEWebkit: 2.46.0 incorrect rendering (6.45 KB, image/png)
2024-10-08 12:10 PDT, Jani Hautakangas
no flags
flattening-layer-backdrops (2.22 KB, text/html)
2024-10-27 05:52 PDT, Jani Hautakangas
no flags
flattening-layer-drop-shadow (1.66 KB, text/html)
2024-10-27 13:52 PDT, Jani Hautakangas
no flags
Jani Hautakangas
Comment 1 2024-10-08 12:09:57 PDT
Created attachment 472864 [details] [Screenshot] Firefox: Layers rendered correcty
Jani Hautakangas
Comment 2 2024-10-08 12:10:49 PDT
Created attachment 472865 [details] [Screenshot] WPEWebkit: 2.46.0 incorrect rendering
Fujii Hironori
Comment 3 2024-10-08 13:02:32 PDT
TextureMapper doesn't support nesting 3D rendering context yet (bug#241699).
Jani Hautakangas
Comment 4 2024-10-08 13:57:50 PDT
Jani Hautakangas
Comment 5 2024-10-27 05:52:31 PDT
Created attachment 473058 [details] flattening-layer-backdrops
Jani Hautakangas
Comment 6 2024-10-27 13:52:59 PDT
Created attachment 473059 [details] flattening-layer-drop-shadow
EWS
Comment 7 2024-10-29 01:14:21 PDT
Committed 285820@main (7f89d2259aab): <https://commits.webkit.org/285820@main> Reviewed commits have been landed. Closing PR #34862 and removing active labels.
Fujii Hironori
Comment 8 2024-10-29 03:04:42 PDT
*** Bug 241699 has been marked as a duplicate of this bug. ***
Michael Catanzaro
Comment 9 2024-10-29 07:13:54 PDT
*** Bug 241016 has been marked as a duplicate of this bug. ***
Pawel Lampe
Comment 10 2025-10-13 05:48:57 PDT
*** Bug 249583 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.