Source/WebCore/platform/graphics/texmap/TextureMapper.cpp
@@ -1338,6 +1338,11 @@ void TextureMapper::setDepthRange(double zNear, double zFar)
     updateProjectionMatrix();
 }
 
+std::pair<double, double> TextureMapper::depthRange() const
+{
+    return { data().zNear, data().zFar };
+}
+
 void TextureMapper::updateProjectionMatrix()
 {
     bool flipY;
